feat css fixes [ci]

--- a/client/src/app/forgot-password/forgot-password.page.html
+++ b/client/src/app/forgot-password/forgot-password.page.html
@@ -3,9 +3,6 @@
         <ion-buttons slot="start">
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
-        <ion-title>
-            {{'Forgot password' | translate}}
-        </ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -15,8 +12,8 @@
             <img src="assets/images/banner_img.png" class="crop_img">
         </div>
         <div class="text_box animate__animated animate__fadeInUp">
-            <h2 class="">{{'It takes less than a minute' | translate}}.</h2>
-            <p class="">{{'Reset your password' | translate}}</p>
+            <h1 class="">{{'Reset your password in less than a minute' | translate}}</h1>
+            <h2 class="">{{'Enter your email to receive password reset instructions' | translate}}</h2>
         </div>
     </div>
 
