--- a/client/src/app/register/register.page.scss
+++ b/client/src/app/register/register.page.scss
@@ -53,44 +53,19 @@ ion-header,
     margin: 16px 0;
 }
 
-.custom-segment {
-    --background: var(--ion-color-light);
-    padding: 0px !important;
-    overflow: hidden;
-}
-
-ion-segment-button {
-    height: 35px;
-    margin: 0px !important;
-    --background: transparent;
-    --background-checked: var(--ion-color-primary);
-    --color: var(--ion-color-medium);
-    --color-checked: white;
-    --indicator-color: transparent;
-    min-height: 48px;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 0;
-    line-height: 16px;
-    text-transform: none;
-    transition: all 0.3s ease;
-}
-
-.segment-button-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.segment-button-content ion-icon {
-    font-size: 18px;
-    margin-right: 8px;
-}
 
 .type-description {
     margin-top: 12px;
     padding: 0 4px;
     color: var(--ion-color-medium);
     font-size: 14px;
+}
+
+.large {
+    font-size: large;
+}
+
+.d-flex {
+    display: flex;
+    justify-content: center;
 }
