--- a/client/src/app/forgot-password/forgot-password.page.html
+++ b/client/src/app/forgot-password/forgot-password.page.html
@@ -10,23 +10,23 @@
     <div class="banner">
         <div class="banner_img center_img">
             <img src="assets/images/banner_img.png" class="crop_img">
-        </div>
-        <div class="text_box animate__animated animate__fadeInUp">
-            <h1 class="">{{'Reset your password in less than a minute' | translate}}</h1>
-            <h2 class="">{{'Enter your email to receive password reset instructions' | translate}}</h2>
+            <div class="logo animate__animated animate__fadeInUp">
+                <h1>{{ 'Reset your password' | translate }}</h1>
+            </div>
         </div>
     </div>
 
-    <div class="form">
+    <div class="form" >
         <ion-list>
             <ion-item class="animate__animated animate__fadeInUp">
                 <ion-input [(ngModel)]="email" labelPlacement="floating" [label]="'Email' | translate"
                     type="email"></ion-input>
             </ion-item>
         </ion-list>
-
-        <ion-button size="large" expand="round" class="btn animate__animated animate__fadeInUp"
-            (click)="submit()">{{'Submit' | translate}}
-        </ion-button>
     </div>
 </ion-content>
+
+<ion-footer class="ion-no-border animate__animated animate__fadeInUp">
+    <ion-button size="large" expand="round" class="btn"
+        (click)="submit()">{{'Submit' | translate}}</ion-button>
+</ion-footer>
