--- a/client/src/app/settings/settings.page.html
+++ b/client/src/app/settings/settings.page.html
@@ -32,8 +32,8 @@
     </div>
 
     <div class="get_pro d-flex" (click)="get_pro()">
-        <h2>Get Access to 1000+ Cources</h2>
-        <h3 class="end">{{'get_pro' | translate}}</h3>
+        <h2>Unlock app full potential!</h2>
+        <h3 class="end">{{'BUY' | translate}}</h3>
     </div>
 
     <ion-list lines="none">
