--- a/client/src/app/forgot-password/forgot-password.page.scss
+++ b/client/src/app/forgot-password/forgot-password.page.scss
@@ -6,55 +6,26 @@ ion-header {
 }
 
 .banner {
-    position: relative;
-    width: 100%;
+    .logo {
+        position: absolute;
+        bottom: 59px;
+        left: 0;
+        width: 100%;
+        padding: 0 30px;
+        --animate-duration: .3s;
+    }
 
     .banner_img {
-        width: 100%;
-        height: 260px;
-
+        height: 200px;
     }
-
-    .text_box {
-        position: absolute;
-        bottom: 60px;
-        padding: 0 30px;
-        width: 100%;
-        z-index: 99;
-    }
-
-    h2 {
-        margin: 0;
-        color: var(--white);
-        font-weight: 400;
-        font-size: .93rem;
-        line-height: 18px;
-        letter-spacing: .3px;
-        z-index: 99;
-        padding-bottom: 15px;
-    }
-
-    p {
-        margin: 0;
-        color: var(--white);
-        font-weight: 400;
-        font-size: 0.8rem;
-        line-height: 18px;
-        z-index: 99;
-    }
-
-    //    &::before {
-    //        content: "";
-    //        position: absolute;
-    //        bottom: 0;
-    //        left: 0;
-    //        width: 100%;
-    //        height: calc(100% - 100px);
-    //        background: linear-gradient(0deg, #1b1b20 0%, rgba(0, 212, 255, 0) 100%);
-    //        z-index: 9;
-    //
-    //    }
 }
+
+ion-header,
+.banner {
+    --ion-text-color: white;
+    color: var(--ion-text-color);
+}
+
 
 .animate__animated.animate__fadeInUp {
     &:nth-child(1) {
@@ -92,7 +63,12 @@ ion-header {
 }
 
 .form {
+    padding-top: 35px;
     ion-list {
        padding-bottom: 25px;
     }
+}
+
+ion-footer {
+    padding: 0px 30px 14px 30px;
 }
