feat UI fixes && usability fixes && bug with showing wrong info on exercise [ci]

--- a/client/src/app/form/exercise-form/exercise-form.component.html
+++ b/client/src/app/form/exercise-form/exercise-form.component.html
@@ -22,7 +22,7 @@
                 <ion-list>
                     <ion-item button (click)="onRemoveExerciseEvent.emit()" class="delete-item">
                         <ion-icon name="trash-outline" slot="start" color="danger"></ion-icon>
-                        <ion-label color="danger">{{ 'Remove excersize' | translate }}</ion-label>
+                        <ion-label color="danger">{{ 'Remove exercise' | translate }}</ion-label>
                     </ion-item>
                 </ion-list>
             </ng-template>
