--- a/client/src/app/program/program.component.html
+++ b/client/src/app/program/program.component.html
@@ -200,7 +200,7 @@
                             }
                             @empty {
                             <ion-label [color]="'medium'">
-                                {{ 'No excercises added yet.' | translate }}
+                                {{ 'No exercises added yet.' | translate }}
                             </ion-label>
                             }
 
