--- a/client/src/app/workout-wizard/workout-wizard.component.html
+++ b/client/src/app/workout-wizard/workout-wizard.component.html
@@ -51,7 +51,7 @@
             </app-exercise-form>
         </div>
         } @else if (currentExerciseIndex() == -1) {
-        <app-no-data [text]="'No excercises found.' | translate"></app-no-data>
+        <app-no-data [text]="'No exercises found.' | translate"></app-no-data>
         } @else {
         <ion-spinner class="fullscreen" name="dots"></ion-spinner>
         }
