--- a/client/src/app/measurement-entry-add-modal/measurement-entry-add-modal.component.html
+++ b/client/src/app/measurement-entry-add-modal/measurement-entry-add-modal.component.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
     <ion-item lines="none" class="ion-align-items-center">
         <ion-label position="stacked">{{ 'Value' | translate }}</ion-label>
-        <ion-input type="number" [(ngModel)]="value"></ion-input>
+        <ion-input type="number" [(ngModel)]="value" autofocus="true"></ion-input>
     </ion-item>
     <ion-item lines="none" class="ion-align-items-center">
         <ion-label position="stacked">{{ 'Date' | translate }}</ion-label>
