--- a/client/src/app/my-activity/my-activity.page.html
+++ b/client/src/app/my-activity/my-activity.page.html
@@ -22,7 +22,7 @@
             </ion-segment-button>
             <ion-segment-button value="stats">
                 <ion-label>
-                    {{'Statistics' | translate}}
+                    {{'Stats' | translate}}
                 </ion-label>
             </ion-segment-button>
             <ion-segment-button value="measurements">
