--- a/client/src/app/sign-in/sign-in.page.scss
+++ b/client/src/app/sign-in/sign-in.page.scss
@@ -143,7 +143,7 @@ ion-header {
                         font-size: 1.2rem;
                         color: var(--primary);
                         position: relative;
-                        left: -12px;
+                        //left: -12px;
                     }
                 }
             }
