--- a/client/src/app/form/exercise-form/exercise-form.component.html
+++ b/client/src/app/form/exercise-form/exercise-form.component.html
@@ -20,6 +20,11 @@
             triggerAction="click">
             <ng-template>
                 <ion-list>
+                    <ion-item button (click)="openSupersetModal(exercise)">
+                        <ion-icon [src]="listCircleIcon" name="list-circle-outline" slot="start"
+                            color="primary"></ion-icon>
+                        <ion-label color="primary">{{ 'Superset' | translate }}</ion-label>
+                    </ion-item>
                     <ion-item button (click)="onRemoveExerciseEvent.emit()" class="delete-item">
                         <ion-icon name="trash-outline" slot="start" color="danger"></ion-icon>
                         <ion-label color="danger">{{ 'Remove exercise' | translate }}</ion-label>
@@ -37,6 +42,10 @@
             {{ exercise.get('restDuration')?.value | duration }}
             <ion-icon size="small" name="chevron-down-outline" slot="end"></ion-icon>
         </ion-button>
+
+        @if (exercise.get('superset')?.value) {
+            <ion-badge color="primary">{{'Superset' | translate }} {{ exercise.get('superset')?.value }}</ion-badge>
+        }
 
         <ion-modal #restPickerModal [backdropDismiss]="true" class="picker-modal">
             <ng-template>
@@ -230,7 +239,8 @@
 
             @if (!workoutMode) {
             <ion-toolbar class="type-selector-toolbar">
-                <ion-segment [value]="selectedWeightType" (ionChange)="setWeightType($event.detail.value)">
+                <ion-segment class="w-100" [value]="selectedWeightType"
+                    (ionChange)="setWeightType($event.detail.value)">
                     @for(weightType of weightTypes; track $index) {
                     <ion-segment-button [value]="weightType" [disabled]="selectedRepType == RepType.Duration">
                         <ion-label>{{ weightType | weightType }}</ion-label>
@@ -240,7 +250,7 @@
             </ion-toolbar>
 
             <ion-toolbar class="type-selector-toolbar">
-                <ion-segment [value]="selectedRepType" (ionChange)="setRepType($event.detail.value)">
+                <ion-segment class="w-100" [value]="selectedRepType" (ionChange)="setRepType($event.detail.value)">
                     @for(repType of repTypes; track $index) {
                     <ion-segment-button [value]="repType">
                         <ion-label>{{ repType | repType }}</ion-label>
@@ -250,7 +260,8 @@
             </ion-toolbar>
             @if (selectedRepType !== RepType.Max) {
             <ion-toolbar class="type-selector-toolbar">
-                <ion-segment [value]="selectedReserveType" (ionChange)="setReserveType($event.detail.value)">
+                <ion-segment class="w-100" [value]="selectedReserveType"
+                    (ionChange)="setReserveType($event.detail.value)">
                     <ion-segment-button [value]="null">
                         <ion-label>{{ 'N/A' | translate }}</ion-label>
                     </ion-segment-button>
@@ -372,6 +383,36 @@
                 </ion-picker-column>
                 }
 
+        </ion-picker>
+    </ng-template>
+</ion-modal>
+
+<ion-modal #supersetPickerModal [backdropDismiss]="true" class="picker-modal" (didDismiss)="cancelSuperset()">
+    <ng-template>
+        <ion-header>
+            <ion-toolbar>
+                <ion-title slot="start">{{ 'Superset' | translate }}</ion-title>
+                <ion-buttons slot="end">
+                    <ion-button (click)="cancelSuperset()">{{ 'Cancel' | translate }}</ion-button>
+                </ion-buttons>
+                <ion-buttons slot="end">
+                    <ion-button (click)="confirmSuperset()">{{ 'OK' | translate }}</ion-button>
+                </ion-buttons>
+            </ion-toolbar>
+            <ion-toolbar class="type-selector-toolbar">
+                <ion-note>
+                    <ion-icon name="information-circle-outline"></ion-icon> {{ 'All exercises that should be in the same superset mark with the same letter.' | translate }} </ion-note>
+            </ion-toolbar>
+        </ion-header>
+        <ion-picker>
+            <ion-picker-column [value]="selectedSuperset" (ionChange)="selectedSuperset = $event.detail.value">
+                <ion-picker-column-option [value]="null">-</ion-picker-column-option>
+                @for (superset of supersets; track superset) {
+                <ion-picker-column-option [value]="superset">
+                    {{ superset }}
+                </ion-picker-column-option>
+                }
+            </ion-picker-column>
         </ion-picker>
     </ng-template>
 </ion-modal>
