feat quick superset edit [ci]

--- a/client/src/app/form/exercise-form/exercise-form.component.html
+++ b/client/src/app/form/exercise-form/exercise-form.component.html
@@ -44,7 +44,7 @@
         </ion-button>
 
         @if (exercise.get('superset')?.value) {
-            <ion-badge color="primary">{{'Superset' | translate }} {{ exercise.get('superset')?.value }}</ion-badge>
+            <ion-badge (click)="openSupersetModal(exercise)" color="primary">{{'Superset' | translate }} {{ exercise.get('superset')?.value }}</ion-badge>
         }
 
         <ion-modal #restPickerModal [backdropDismiss]="true" class="picker-modal">
